<resources>
    <string name="app_name">ImageNote</string>
    <string name="action_settings">Settings</string>

    <string name="empty_list_text">+버튼을 눌러 새로운 노트를 작성하세요!</string>
    <string name="content">내용</string>
    <string name="title">제목</string>

    <string name="confirm_delete">삭제 확인</string>
    <string name="confirm_delete_text">정말 이 노트를 삭제하시겠습니까?</string>
    <string name="confirm_delete_photo">정말 이 사진을 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="check">등록</string>
    <string name="new_note">새로운 노트</string>
    <string name="no">아니오</string>
    <string name="yes">네</string>
    <string name="undo">취소</string>


    <string name="message_url_error">올바르지 않은 이미지 주소입니다.</string>
    <string name="message_url_hint">이미지 주소를 입력해주세요.</string>


    <string name="photo">사진</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="url">이미지 주소</string>

</resources>
